sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: ';' expected but '=' found.
m : Int = 0;
        ^AlgCocktailSort2:5: error: ';' expected but '=' found.
l : Int = 0;
        ^